# frmj

./: .gitignore  LICENSE  README.md  TODO.md  design-chat.md  pyproject.toml
.claude/commands/: unit-test-expand.md
src/frmj/: __init__.py  accounts.py  app.py  cli.py
src/frmj/domain/: __init__.py  analytics.py  pricing.py  risk.py  sizing.py
src/frmj/execution/: oanda.py  sync.py
src/frmj/persistence/: schema.py
tests/: conftest.py  test_accounts.py  test_app.py  test_cli.py
tests/domain/: test_analytics.py  test_pricing.py  test_risk.py  test_sizing.py
tests/execution/: test_oanda_client.py  test_oanda_parsing.py  test_sync.py
tests/persistence/: test_schema.py
