[project]
name = "frmj"
version = "0.1.0"
description = "FRoMaJ — Forex Risk Operations, Management & Journal (Oanda trading assistant)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Molingus", email = "stephen.c976@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "keyring>=25.0.0",
    "typer>=0.24.2",
]

[project.scripts]
frmj = "frmj.cli:app"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.152.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
